updated implementation examples according to c260b49d3b2f5a880046f0dc50a160e999392c3b

--- a/examples/Template:CategoryNewestPage.wiki
+++ b/examples/Template:CategoryNewestPage.wiki
@@ -1,1 +1,1 @@
-<includeonly>{{#invoke:CategoryToolbox|categoryNewestPage}}</includeonly>
+<includeonly>{{#invoke:CategoryToolbox|newestPage}}</includeonly>
