--- a/examples/Template:CategoryHasPage.wiki
+++ b/examples/Template:CategoryHasPage.wiki
@@ -1,1 +1,1 @@
-<includeonly>{{#invoke:CategoryToolbox|categoryHasPage}}</includeonly>
+<includeonly>{{#invoke:CategoryToolbox|hasPage}}</includeonly>
